# Manabu

./: .gitignore  .prettierrc  README.md  package.json  pyproject.toml  requirements.txt  tailwind.config.js
src/: config.py  index.py  settings.py
src/database/: __init__.py  globals.py
src/database/exc/: __init__.py
src/database/models/: __init__.py  base.py  category.py  todo.py  user.py
src/database/orm/: __init__.py
src/forms/: __init__.py  login.py  register.py
src/forms/auth/: __init__.py
src/forms/categories/: __init__.py  add_category.py  edit_category.py
src/forms/todos/: __init__.py  add_todo.py  edit_todo.py  set_completed_form.py
src/middleware/: __init__.py  redirect_if_logged_in.py  require_login.py
src/routes/: __init__.py  landing_page.py  router.py
src/routes/auth/: __init__.py  login.py  logout.py  register.py
src/routes/categories/: __init__.py  add_category.py  create_category.py  delete_category.py  edit_category.py  show_categories.py
src/routes/general/: __init__.py  dashboard.py  landing_page.py
src/routes/todos/: __init__.py  add_todo.py  delete_todo.py  edit_todo.py  set_completed.py  show_todos.py
src/static/js/: icon.js  nav.js  popup.js  sidebar.js  theme.js
src/static/styles/: build.css  input.css
src/templates/components/: icons.jinja  nav.jinja  sidebar.jinja
src/templates/layout/: base.jinja
src/tests/: __init__.py  conftest.py
src/tests/test_database/: test_globals.py  test_models.py
src/tests/test_forms/: test_login_form.py  test_register_form.py
src/utils/: __init__.py
(+37 files in other folders)
