[build-system]
requires = ["setuptools >= 69.4.2"]
build-backend = "setuptools.build_meta"

[project]
name = "manabu"
version = "0.1.0"
dependencies = [
    "flask",
    "flask-session",
    "sqlalchemy",
    "werkzeug",
    "wtforms",
    "wtforms[email]",
    "multidict"
]

[project.optional-dependencies]
test = [
    "pytest"
]






